syntax = "proto3";
package emu;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service EmuManager {
    rpc RegisterWorker(WorkerRegistration) returns (google.protobuf.Empty);

    rpc Check(google.protobuf.Empty) returns (CheckResponse);

    rpc Run(RunInput) returns (google.protobuf.Empty);

    rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);

    rpc Ping(PingRequest) returns (PingResponse);
}

message WorkerRegistration {
    google.protobuf.UInt32Value id = 1;
    WorkerAddress address = 2;
}

message WorkerAddress {
    string ip_address = 1;
    uint32 control_port = 2;
    uint32 data_port = 3;
}

message CheckResponse {
    google.protobuf.UInt32Value nr_workers = 1;
}

message RunSpecification {
    repeated P2PWorkload p2p_workloads = 1;
    Ecdf size_distribution = 2;
    repeated uint64 output_buckets = 3;
}

message AllToAll {
    uint64 rtt_us = 1;
    uint32 bandwidth_mbps = 2;
}

message NetworkProfile {
    oneof profile_type {
        AllToAll all_to_all = 1;
    }
}

message RunInput {
    RunSpecification run_spec = 1;
    NetworkProfile network_profile = 2;
}

message ExponentialShape {}

message LogNormalShape {
    double sigma = 1;
}

message DistShape {
    oneof shape {
        ExponentialShape exponential = 1;
        LogNormalShape log_normal = 2;
    }
}

message P2PWorkload {
    google.protobuf.UInt32Value src = 1;
    google.protobuf.UInt32Value dst = 2;
    google.protobuf.UInt32Value dscp = 3;
    DistShape delta_distribution_shape = 4;
    uint32 target_rate_mbps = 5;
    uint32 start_secs = 6;
    uint32 duration_secs = 7;
    uint32 nr_workers = 8;
}

message Ecdf {
    repeated CdfPoint points = 1;
}

message CdfPoint {
    double x = 1;
    double y = 2;
}

message PingRequest {
    google.protobuf.UInt32Value src = 1;
    google.protobuf.UInt32Value dst = 2;
}

message PingResponse {
    repeated uint64 times_us = 1;
}

message GenericRequestResponse {
    bytes data = 1;
}

service EmuWorker {
    rpc IntroducePeers(WorkerAddressMap) returns (google.protobuf.Empty);

    rpc Check(google.protobuf.Empty) returns (google.protobuf.Empty);

    rpc Run(RunInput) returns (google.protobuf.Empty);

    rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);

    rpc Ping(PingRequest) returns (PingResponse);
}

message WorkerAddressMap {
    map<uint32, WorkerAddress> workers = 1;
}
